--- a/orders.html
+++ b/orders.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Orders</title>
+    <title>ordenes</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
