--- a/amazon.html
+++ b/amazon.html
@@ -50,6 +50,7 @@
       <div class="products-grid js-productos-grid">
       </div>
     </div>
+    <script src="scripts/carrito.js"></script>
     <script src="data/products.js"></script>
     <script src="scripts/amazon.js"></script>
   </body>
