--- a/amazon.html
+++ b/amazon.html
@@ -40,8 +40,8 @@
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="cart-quantity">3</div>
-          <div class="cart-text">Cart</div>
+          <div class="cart-quantity js-carrito-quantity">0</div>
+          <div class="cart-text">Carrito</div>
         </a>
       </div>
     </div>
