eliminar de carrito

--- a/checkout.html
+++ b/checkout.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="checkout-header-middle-section">
-          Checkout (<a class="return-to-home-link"
+          Revisión (<a class="return-to-home-link"
             href="amazon.html">3 items</a>)
         </div>
 
@@ -36,7 +36,7 @@
     </div>
 
     <div class="main">
-      <div class="page-title">Review your order</div>
+      <div class="page-title">Revisión de tu pedido</div>
 
       <div class="checkout-grid">
         <div class="order-summary js-carrito">
@@ -44,7 +44,7 @@
 
         <div class="payment-summary">
           <div class="payment-summary-title">
-            Order Summary
+            Resumen de tu orden
           </div>
 
           <div class="payment-summary-row">
@@ -53,27 +53,27 @@
           </div>
 
           <div class="payment-summary-row">
-            <div>Shipping &amp; handling:</div>
+            <div>Envío &amp; Manejo:</div>
             <div class="payment-summary-money">$4.99</div>
           </div>
 
           <div class="payment-summary-row subtotal-row">
-            <div>Total before tax:</div>
+            <div>Total antes de impuestos:</div>
             <div class="payment-summary-money">$47.74</div>
           </div>
 
           <div class="payment-summary-row">
-            <div>Estimated tax (10%):</div>
+            <div>Impuestos estimados (10%):</div>
             <div class="payment-summary-money">$4.77</div>
           </div>
 
           <div class="payment-summary-row total-row">
-            <div>Order total:</div>
+            <div>Total del pedido:</div>
             <div class="payment-summary-money">$52.51</div>
           </div>
 
           <button class="place-order-button button-primary">
-            Place your order
+            Haz tu pedido
           </button>
         </div>
      
