--- a/checkout.html
+++ b/checkout.html
@@ -25,8 +25,8 @@
         </div>
 
         <div class="checkout-header-middle-section">
-          Revisión (<a class="return-to-home-link"
-            href="amazon.html">3 items</a>)
+          Revisión (<a class="return-to-home-link js-revision"
+            href="amazon.html"></a>)
         </div>
 
         <div class="checkout-header-right-section">
