--- a/test-jasmine/tests.html
+++ b/test-jasmine/tests.html
@@ -20,7 +20,7 @@
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/PlayerSpec.js"></script>
-
+  <script type="module" src="moneyTest.js"></script>
 </head>
 
 <body>
