--- a/tracking.html
+++ b/tracking.html
@@ -86,5 +86,11 @@
         </div>
       </div>
     </div>
+
+    <script>
+     const url = new URL(window.location.href);
+     url.searchParams.get('orderId');
+     url.searchParams.get('productId');
+    </script>
   </body>
 </html>
