--- a/amazon.html
+++ b/amazon.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="amazon-header-middle-section">
-        <input class="search-bar" type="text" placeholder="Search">
+        <input class="search-bar" type="text" placeholder="Buscar">
 
         <button class="search-button">
           <img class="search-icon" src="images/icons/search-icon.png">
@@ -34,8 +34,8 @@
 
       <div class="amazon-header-right-section">
         <a class="orders-link header-link" href="orders.html">
-          <span class="returns-text">Returns</span>
-          <span class="orders-text">& Orders</span>
+          <span class="returns-text">Retorno</span>
+          <span class="orders-text">& Ordenes</span>
         </a>
 
         <a class="cart-link header-link" href="checkout.html">
