--- a/tracking.html
+++ b/tracking.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="amazon-header-middle-section">
-        <input class="search-bar" type="text" placeholder="Search">
+        <input class="search-bar" type="text" placeholder="Buscar">
 
         <button class="search-button">
           <img class="search-icon" src="images/icons/search-icon.png">
@@ -37,60 +37,23 @@
 
       <div class="amazon-header-right-section">
         <a class="orders-link header-link" href="orders.html">
-          <span class="returns-text">Returns</span>
-          <span class="orders-text">& Orders</span>
+          <span class="returns-text">Retorno</span>
+          <span class="orders-text">& Ordenes</span>
         </a>
 
         <a class="cart-link header-link" href="checkout.html">
           <img class="cart-icon" src="images/icons/cart-icon.png">
-          <div class="cart-quantity">3</div>
-          <div class="cart-text">Cart</div>
+          <div class="cart-quantity js-carrito-quantity"></div>
+          <div class="cart-text">Carrito</div>
         </a>
       </div>
     </div>
 
     <div class="main">
-      <div class="order-tracking">
-        <a class="back-to-orders-link link-primary" href="orders.html">
-          View all orders
-        </a>
-
-        <div class="delivery-date">
-          Arriving on Monday, June 13
-        </div>
-
-        <div class="product-info">
-          Black and Gray Athletic Cotton Socks - 6 Pairs
-        </div>
-
-        <div class="product-info">
-          Quantity: 1
-        </div>
-
-        <img class="product-image" src="images/products/athletic-cotton-socks-6-pairs.jpg">
-
-        <div class="progress-labels-container">
-          <div class="progress-label">
-            Preparing
-          </div>
-          <div class="progress-label current-status">
-            Shipped
-          </div>
-          <div class="progress-label">
-            Delivered
-          </div>
-        </div>
-
-        <div class="progress-bar-container">
-          <div class="progress-bar"></div>
-        </div>
+      <div class="order-tracking js-order-tracking">
       </div>
     </div>
 
-    <script>
-     const url = new URL(window.location.href);
-     url.searchParams.get('orderId');
-     url.searchParams.get('productId');
-    </script>
+    <script type="module" src="scripts/tracking.js"></script>
   </body>
 </html>
