Cambios mios al html - header

--- a/tracking.html
+++ b/tracking.html
@@ -21,9 +21,9 @@
       <div class="amazon-header-left-section">
         <a href="amazon.html" class="header-link">
           <img class="amazon-logo"
-            src="images/amazon-logo-white.png">
+            src="images/mi-logo-white.png">
           <img class="amazon-mobile-logo"
-            src="images/amazon-mobile-logo-white.png">
+            src="images/home.png">
         </a>
       </div>
 
@@ -37,8 +37,8 @@
 
       <div class="amazon-header-right-section">
         <a class="orders-link header-link" href="orders.html">
-          <span class="returns-text">Retorno</span>
-          <span class="orders-text">& Ordenes</span>
+          <span class="returns-text">Devoluciones</span>
+          <span class="orders-text">y pedidos</span>
         </a>
 
         <a class="cart-link header-link" href="checkout.html">
