--- a/checkout.html
+++ b/checkout.html
@@ -19,8 +19,8 @@
       <div class="header-content">
         <div class="checkout-header-left-section">
           <a href="amazon.html">
-            <img class="amazon-logo" src="images/amazon-logo.png">
-            <img class="amazon-mobile-logo" src="images/amazon-mobile-logo.png">
+            <img class="amazon-logo" src="images/mi-logo.png">
+            <img class="amazon-mobile-logo" src="images/home-black.png">
           </a>
         </div>
 
